--- a/ManageGo/Views/BuildingsListPage.xaml
+++ b/ManageGo/Views/BuildingsListPage.xaml
@@ -75,7 +75,7 @@
                                                HorizontalOptions="Center"
                                                VerticalOptions="StartAndExpand" />
                                         <StackLayout HorizontalOptions="FillAndExpand">
-                                            <Label Text="{Binding BuildingName}"
+                                            <Label Text="{Binding BuildingShortAddress}"
                                                    FontSize="Medium"
                                                    FontAttributes="Bold"
                                                    TextColor="{StaticResource Grey-Mid-1}" />
