--- a/ManageGo/Views/TicketFilterSelectView.xaml
+++ b/ManageGo/Views/TicketFilterSelectView.xaml
@@ -7,6 +7,7 @@
              x:Class="ManageGo.TicketFilterSelectView">
     <ContentPage.Resources>
         <local:FilterFieldStringToColor x:Key="FilterFieldStringToColor" />
+        <local:BoolToCheckBoxIconSource x:Key="BoolToCheckBoxIconSource" />
     </ContentPage.Resources>
     <ScrollView>
         <StackLayout Spacing="0">
@@ -55,7 +56,7 @@
                                         <StackLayout Orientation="Horizontal"
                                                      Margin="0,12,0,0">
                                             <Image Source="{Binding CheckBoxImage}" />
-                                            <Label Text="{Binding BuildingName}"
+                                            <Label Text="{Binding BuildingShortAddress}"
                                                    VerticalOptions="CenterAndExpand"
                                                    LineBreakMode="TailTruncation"
                                                    FontSize="Small" />
@@ -108,7 +109,7 @@
                         <StackLayout IsVisible="{Binding FilterPrioritiesExpanded}">
                             <StackLayout Orientation="Horizontal"
                                          Margin="0,12,0,0">
-                                <Image Source="{Binding HighPriorityCheckBoxImage}" />
+                                <Image Source="{Binding IsHighPriorityFilterSelected,Converter={StaticResource BoolToCheckBoxIconSource}}" />
                                 <Label Text="High"
                                        VerticalOptions="CenterAndExpand"
                                        LineBreakMode="TailTruncation"
@@ -121,7 +122,7 @@
                             </StackLayout>
                             <StackLayout Orientation="Horizontal"
                                          Margin="0,12,0,0">
-                                <Image Source="{Binding MediumPriorityCheckBoxImage}" />
+                                <Image Source="{Binding IsMediumPriorityFilterSelected, Converter={StaticResource BoolToCheckBoxIconSource}}" />
                                 <Label Text="Medium"
                                        VerticalOptions="CenterAndExpand"
                                        LineBreakMode="TailTruncation"
@@ -134,7 +135,7 @@
                             </StackLayout>
                             <StackLayout Orientation="Horizontal"
                                          Margin="0,12,0,0">
-                                <Image Source="{Binding LowPriorityCheckBoxImage}" />
+                                <Image Source="{Binding IsLowPriorityFilterSelected, Converter={StaticResource BoolToCheckBoxIconSource}}" />
                                 <Label Text="Low"
                                        VerticalOptions="CenterAndExpand"
                                        LineBreakMode="TailTruncation"
@@ -324,7 +325,7 @@
                         <StackLayout IsVisible="{Binding FilterStatusExpanded}">
                             <StackLayout Orientation="Horizontal"
                                          Margin="0,12,0,0">
-                                <Image Source="{Binding OpenTicketFilterCheckBoxImage}" />
+                                <Image Source="{Binding SelectedOpenTicketsFilter,Converter={StaticResource BoolToCheckBoxIconSource}}" />
                                 <Label Text="Open"
                                        VerticalOptions="CenterAndExpand"
                                        LineBreakMode="TailTruncation"
@@ -337,7 +338,7 @@
                             </StackLayout>
                             <StackLayout Orientation="Horizontal"
                                          Margin="0,12,0,0">
-                                <Image Source="{Binding ClosedTicketFilterCheckBoxImage}" />
+                                <Image Source="{Binding SelectedClosedTicketsFilter,Converter={StaticResource BoolToCheckBoxIconSource}}" />
                                 <Label Text="Closed"
                                        VerticalOptions="CenterAndExpand"
                                        LineBreakMode="TailTruncation"
