--- a/ManageGo/Views/EditTicketDetailsView.xaml
+++ b/ManageGo/Views/EditTicketDetailsView.xaml
@@ -10,6 +10,16 @@
     </ContentView.Resources>
     <ContentView.Content>
         <ScrollView VerticalOptions="FillAndExpand">
+            <ScrollView.InputTransparent>
+                <OnPlatform x:TypeArguments="x:Boolean">
+                    <OnPlatform.Platforms>
+                        <On Platform="iOS"
+                            Value="False" />
+                        <On Platform="Android"
+                            Value="True" />
+                    </OnPlatform.Platforms>
+                </OnPlatform>
+            </ScrollView.InputTransparent>
             <StackLayout Spacing="0">
                 <Grid Padding="21,17,21,8"
                       RowSpacing="12">
