--- a/ManageGo/Views/PaymentsPage.xaml
+++ b/ManageGo/Views/PaymentsPage.xaml
@@ -114,9 +114,9 @@
                     <Grid Padding="14,12,18,8"
                           ColumnSpacing="15">
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="auto" />
+                            <ColumnDefinition Width="0.6*" />
                             <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="auto" />
+                            <ColumnDefinition Width="0.6*" />
                         </Grid.ColumnDefinitions>
                         <Button Grid.Column="0"
                                 FontSize="Small"
@@ -124,7 +124,7 @@
                                 Text="Reset"
                                 Command="{Binding OnResetFiltersButtonTapped}"
                                 BackgroundColor="Transparent"
-                                HorizontalOptions="EndAndExpand" />
+                                HorizontalOptions="CenterAndExpand" />
                         <Button Grid.Column="1"
                                 FontSize="Medium"
                                 TextColor="White"
@@ -140,7 +140,7 @@
                                 Text="Cancel"
                                 Command="{Binding OnCloseFliterViewTapped}"
                                 BackgroundColor="Transparent"
-                                HorizontalOptions="EndAndExpand" />
+                                HorizontalOptions="CenterAndExpand" />
                     </Grid>
                     <BoxView HeightRequest="1"
                              VerticalOptions="Center"
