--- a/ManageGo/Views/TicketDetailsPage.xaml
+++ b/ManageGo/Views/TicketDetailsPage.xaml
@@ -402,6 +402,17 @@
                             Padding="28,0,28,0"
                             Margin="6,-15,0,0"
                             Scrolled="Handle_Scrolled">
+
+                    <ScrollView.InputTransparent>
+                        <OnPlatform x:TypeArguments="x:Boolean">
+                            <OnPlatform.Platforms>
+                                <On Platform="iOS"
+                                    Value="False" />
+                                <On Platform="Android"
+                                    Value="True" />
+                            </OnPlatform.Platforms>
+                        </OnPlatform>
+                    </ScrollView.InputTransparent>
                     <StackLayout Spacing="0">
                         <Label Text="Event summary:"
                                Margin="0,0,0,4"
@@ -609,6 +620,16 @@
                             Padding="28,0,28,0"
                             Margin="6,-15,0,0"
                             Scrolled="Handle_Scrolled">
+                    <ScrollView.InputTransparent>
+                        <OnPlatform x:TypeArguments="x:Boolean">
+                            <OnPlatform.Platforms>
+                                <On Platform="iOS"
+                                    Value="False" />
+                                <On Platform="Android"
+                                    Value="True" />
+                            </OnPlatform.Platforms>
+                        </OnPlatform>
+                    </ScrollView.InputTransparent>
                     <StackLayout Spacing="0">
                         <Label Text="Work order summary:"
                                Margin="0,0,0,4"
