--- a/ManageGo/Views/TicketFilterSelectView.xaml
+++ b/ManageGo/Views/TicketFilterSelectView.xaml
@@ -10,6 +10,16 @@
         <local:BoolToCheckBoxIconSource x:Key="BoolToCheckBoxIconSource" />
     </ContentPage.Resources>
     <ScrollView>
+        <ScrollView.InputTransparent>
+            <OnPlatform x:TypeArguments="x:Boolean">
+                <OnPlatform.Platforms>
+                    <On Platform="iOS"
+                        Value="False" />
+                    <On Platform="Android"
+                        Value="True" />
+                </OnPlatform.Platforms>
+            </OnPlatform>
+        </ScrollView.InputTransparent>
         <StackLayout Spacing="0">
             <StackLayout Padding="21,17,21,17"
                          Spacing="0">
@@ -21,6 +31,78 @@
                                        FontSize="Small"
                                        HorizontalOptions="FillAndExpand" />
                 </StackLayout>
+                <BoxView HeightRequest="1"
+                         BackgroundColor="Silver"
+                         HorizontalOptions="FillAndExpand" />
+                <!-- Date -->
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="3*" />
+                        <ColumnDefinition Width=".5*" />
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    <StackLayout Padding="0,17"
+                                 Grid.Column="0"
+                                 Grid.Row="0">
+                        <Label
+                            Text="Date"
+                            TextColor="{Binding CalendarButtonText,Converter={StaticResource FilterFieldStringToColor}}"
+                            FontSize="Small" />
+                        <StackLayout.GestureRecognizers>
+                            <TapGestureRecognizer NumberOfTapsRequired="1"
+                                                  Command="{Binding OnExpandFilterTapped}"
+                                                  CommandParameter="Date" />
+                        </StackLayout.GestureRecognizers>
+                    </StackLayout>
+                    <Grid IsVisible="{Binding FilterDateExpanded}"
+                          Grid.Column="0"
+                          Grid.Row="1"
+                          Grid.ColumnSpan="3">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="auto" />
+                            <RowDefinition Height="*" />
+                        </Grid.RowDefinitions>
+                        <controls:CalendarView Grid.Row="1"
+                                               HeightRequest="245"
+                                               SelectedDates="{Binding DateRange}"
+                                               WidthRequest="310"
+                                               AllowMultipleSelection="true" />
+                    </Grid>
+                    <StackLayout Padding="0,17"
+                                 Grid.Row="0"
+                                 Grid.Column="1">
+                        <Label
+                            Text="{Binding CalendarButtonText}"
+                            LineBreakMode="TailTruncation"
+                            TextColor="Gray"
+                            FontSize="Small">
+
+                        </Label>
+                        <StackLayout.GestureRecognizers>
+                            <TapGestureRecognizer NumberOfTapsRequired="1"
+                                                  Command="{Binding OnExpandFilterTapped}"
+                                                  CommandParameter="Date" />
+                        </StackLayout.GestureRecognizers>
+                    </StackLayout>
+                    <StackLayout Padding="0,17"
+                                 Grid.Column="2"
+                                 Grid.Row="0">
+                        <Image
+                            VerticalOptions="StartAndExpand"
+                            HorizontalOptions="EndAndExpand"
+                            Source="chevron_right.png" />
+                        <StackLayout.GestureRecognizers>
+                            <TapGestureRecognizer NumberOfTapsRequired="1"
+                                                  Command="{Binding OnExpandFilterTapped}"
+                                                  CommandParameter="Date" />
+                        </StackLayout.GestureRecognizers>
+                    </StackLayout>
+
+                </Grid>
                 <BoxView HeightRequest="1"
                          BackgroundColor="Silver"
                          HorizontalOptions="FillAndExpand" />
