* MainActivity.cs: fixed droid icon
* LoginPage.xaml:
* ManageGo.iOS.csproj:
* SplashActivity.cs:
* ManageGo.Android.csproj:
* TenantFilterSelectView.xaml:
* clip.png:
* AndroidManifest.xml:
* Icon.png:
* clip.png:
* Resource.designer.cs:
* icon.png:
* Icon.png:
* clip.png:
* clip.png:
* Icon.png:
* Icon.png:
* clip.png:
* clip_iso.png:
* clip_iso.png:
* ic_launcher.png:
* ic_launcher.png:
* ic_launcher.png:
* ic_launcher.png:
* ic_launcher.png:
* ic_launcher_round.png:
* ic_launcher_background.xml:
* ic_launcher.xml:
* ic_launcher_round.png:
* ic_launcher_round.png:
* ic_launcher_round.png:
* awaiting_response.png:
* ic_launcher_background.xml:
* launcher_foreground.png:
* launcher_foreground.png:
* launcher_foreground.png:
* ic_launcher_round.png:
* awaiting_response.png:
* capture_video_stop_2.png:
* capture_video_play_2.png:
* launcher_foreground.png:
* launcher_foreground.png:
* ic_launcher_foreground.png:
* ic_launcher_foreground.png:
* ic_launcher_foreground.xml:
* ic_launcher_foreground.png:
* ic_launcher_round.xml:
* ic_launcher_foreground.png:
* ic_launcher_foreground.png:

--- a/ManageGo/Views/LoginPage.xaml
+++ b/ManageGo/Views/LoginPage.xaml
@@ -33,6 +33,7 @@
                            FontSize="Small"
                            HorizontalOptions="CenterAndExpand" />
                     <local:CustomEntry Placeholder="Enter your email"
+                                       AutomationId="email_entry"
                                        Text="{Binding UserEmail}" />
                     <BoxView HeightRequest="1"
                              Margin="0,-4,0,0"
@@ -43,6 +44,7 @@
                            FontSize="Small"
                            HorizontalOptions="CenterAndExpand" />
                     <local:CustomEntry Placeholder="Password"
+                                       AutomationId="password_entry"
                                        Text="{Binding UserPassword}"
                                        IsPassword="true" />
                     <BoxView HeightRequest="1"
