--- a/ManageGo/Views/TenantFilterSelectView.xaml
+++ b/ManageGo/Views/TenantFilterSelectView.xaml
@@ -9,7 +9,7 @@
         <local:FilterFieldStringToColor x:Key="FilterFieldStringToColor" />
         <local:BoolToCheckBoxIconSource x:Key="BoolToCheckBoxIconSource" />
     </ContentView.Resources>
-    <ScrollView>
+    <ScrollView Padding="12,0,12,0">
         <ScrollView.InputTransparent>
             <OnPlatform x:TypeArguments="x:Boolean">
                 <OnPlatform.Platforms>
